@@ -6,8 +6,12 @@
 {deps,
     [
       { mondemand_server,
-        "1.5.0",
-        {git, "git://github.com/mondemand/mondemand-server.git", {tag, "1.5.0"} }
+        "2.0.0",
+        {git, "git://github.com/mondemand/mondemand-server.git", {tag, "2.0.0"} }
+      },
+      { parse_trans,
+        "2.8",
+        {git, "git://github.com/uwiger/parse_trans.git", {tag, "2.8"} }
       }
     ]
 }.
