@@ -1,7 +1,7 @@
 { application, mondemand_backend_stats_opentsdb,
   [
     { description,"A plugin for the mondemand server to send stats to opentsdb/kairosdb"},
-    { vsn,"0.0.0"},
+    { vsn,"0.1.0"},
     { modules,[]},
     { registered,[]},
     { applications, [kernel,stdlib]},
